[package]
name = "bevy_falling_sand"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "multi_threaded",
    "x11",
    "dynamic_linking",
] }
bevy_rapier2d = "0.30.0"
rand = "0.9.2"

[profile.dev.package."*"]
opt-level = 3